# gb2c

./: .gitignore  CMakeLists.txt  README.md  run_individual_test.bat  run_tests.bat  run_tests.sh  test_references.bat  test_references.ps1
.github/workflows/: multi-platform.yml  windows-build-test.yml
converted/: core.c  ram.c
include/gbasm_to_c/: AsmAnalyzer.h  AsmParser.h  CGenerator.h  Function.h  Instruction.h
output/: core.c
src/: AsmAnalyzer.cpp  AsmAnalyzer.h  AsmParser.cpp  CGenerator.cpp  Converter.cpp  Converter.h  Function.cpp  Instruction.cpp  Instruction.h  Variable.cpp  Variable.h  defines.h  main.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_battle_core.cpp  test_flag_action.cpp  test_joypad.cpp  test_playtime.cpp
